--- a/package.json
+++ b/package.json
@@ -9,26 +9,16 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.2.2",
-    "@vercel/blob": "^2.0.0",
-    "@vercel/postgres": "^0.10.0",
-    "bcryptjs": "^3.0.3",
-    "framer-motion": "^12.23.24",
     "next": "16.0.3",
-    "next-auth": "5.0.0-beta.30",
     "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "react-hook-form": "^7.66.1",
-    "zod": "^4.1.12"
+    "react-dom": "19.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/bcryptjs": "^3.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
-    "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
     "tailwindcss": "^4",
